-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for S Buisson <sbuisson@ddn.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/3a01b782-5c68-42bc-a3a6-207b7413418e
test_27A failed with the following error:
lfs setstripe: setstripe error for '/mnt/lustre': Unknown error 524
The test stops on a different error (error deleting stripe '/mnt/lustre'), but the original problem happens at the very beginning of the test, when the striping cannot be set, with the error:
lfs setstripe: setstripe error for '/mnt/lustre': Unknown error 524
In the client's console, we can see the following message:
[ 1579.789018] LustreError: 11-0: MGC10.9.4.89@tcp: operation mgs_set_info to node 10.9.4.89@tcp failed: rc = -524
And in MGS console, we have:
[ 1497.640748] LustreError: 13035:0:(tgt_handler.c:626:tgt_handler_find_check()) MGS: unsupported opcode 0xff
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_27A - error deleting stripe '/mnt/lustre'
- is related to
-
LU-13430 Rework __vfs_getxattr/__vfs_setxattr/__vfs_removexattr support
-
- Resolved
-