LU-13465 vfs: make ll_vfs_setxattr return -EOPNOTSUPP

New compat macros ll_vfs_setxattr/ll_vfs_removexattr need to return
-EOPNOTSUPP instead of -ENOTSUPP. Indeed, the llapi_layout_get_by_fd()
code checks for "-EOPNOTSUPP" and handles this specially.

Also, the case of missing i_op->setxattr() and i_op->getxattr() can be
considered unlikely.

Test-Parameters: clientversion=2.12 envdefinitions=SANITY_EXCEPT="27M 56ra 151 156 802"
Signed-off-by: Sebastien Buisson <sbuisson@ddn.com>
Change-Id: I2474c184a1597979971881de84638fb8d281f704
Reviewed-on: https://review.whamcloud.com/38301
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>